Working sample app

--- a/TodoMAUI/MainPage.xaml
+++ b/TodoMAUI/MainPage.xaml
@@ -10,30 +10,42 @@
           Padding="10"
           RowSpacing="10"
           ColumnSpacing="10">
+
         <Image Grid.ColumnSpan="2"
                Source="tick.png" />
+
         <Entry Placeholder="Enter task"
                Text="{Binding Text}"
                Grid.Row="1"/>
+
         <Button Text="Add"
                 Command="{Binding AddCommand}"
                 Grid.Row="1"
                 Grid.Column="1"/>
+
         <CollectionView Grid.Row="2" Grid.ColumnSpan="2"
-                        ItemsSource="{Binding Items}">
+                        ItemsSource="{Binding Items}"
+                        SelectionMode="None">
            
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="{x:Type x:String}">
                     <SwipeView>
                         <SwipeView.RightItems>
-                         
+                         <SwipeItems>
                             <SwipeItem Text="Delete"
                                        BackgroundColor="Red"
-                                       Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}, AncestorLevel=4}, Path=DeleteCommand}"
+                                       Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}}, Path=DeleteCommand}"
                                        CommandParameter="{Binding .}"/>
+                                </SwipeItems>
                         </SwipeView.RightItems>
                         <Grid Padding="0,5">
                             <Frame>
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}}, Path=TapCommand}"
+                                       CommandParameter="{Binding .}"/>
+
+                                </Frame.GestureRecognizers>
                                 <Label Text="{Binding .}"/>
                             </Frame>
                         </Grid>
