--- a/TodoMAUI/DetailPage.xaml
+++ b/TodoMAUI/DetailPage.xaml
@@ -2,11 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TodoMAUI.DetailPage"
+             xmlns:viewmodel="clr-namespace:TodoMAUI.ViewModel"
+             x:DataType="viewmodel:DetailViewModel"
              Title="DetailPage">
     <StackLayout>
-        <Label Text="Welcome to .NET MAUI!"
+        <Label Text="{Binding Text}"
+               FontSize="20"
                 VerticalOptions="Center" 
                 HorizontalOptions="Center" />
+
+        <Button Text="Go back"
+                Command="{Binding GoBackCommand}"/>
     </StackLayout>
 </ContentPage>
 
