Basic tab layout and homepage mockup

--- a/FishinLogs/App.xaml
+++ b/FishinLogs/App.xaml
@@ -2,6 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FishinLogs"
+             xmlns:c="clr-namespace:FishinLogs.View"
              x:Class="FishinLogs.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -11,5 +12,24 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
+    <Application.MainPage>
+        <Shell>
+            <TabBar x:Name="PhoneTabs">
+                <Tab Icon="fish_svgrepo_com">
+                    <ShellContent ContentTemplate="{DataTemplate c:HomePage}"/>
+                </Tab>
+                <Tab Icon="vinyl_record_svgrepo_com">
+                    <ShellContent ContentTemplate="{DataTemplate c:RecordsPage}"/>
+                </Tab>
+                <Tab Icon="stats_svgrepo_com" >
+                    <ShellContent ContentTemplate="{DataTemplate c:StatisticsPage}"/>
+                </Tab>
+                <Tab Icon="settings_svgrepo_com" >
+                    <ShellContent ContentTemplate="{DataTemplate c:SettingsPage}"/>
+                </Tab>
+            </TabBar>
+        </Shell>
+
+    </Application.MainPage>
 </Application>
 
