--- a/FishinLogs/View/RecordsPage.xaml
+++ b/FishinLogs/View/RecordsPage.xaml
@@ -3,10 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FishinLogs.View.RecordsPage"
              Title="List fish">
-    <StackLayout>
-        <Label Text="Welcome to records page"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center" />
-    </StackLayout>
+
+
+        <Grid ColumnDefinitions="100, 20, *, 110"
+              RowDefinitions="100,20">
+            <Image Source="fish_svgrepo_com"
+                   Grid.Column="0"/>
+            <Label Text="Asaris"
+               FontSize="50"
+               Grid.Column="2"
+               Grid.ColumnSpan="2"
+               BackgroundColor="Orange"/>
+
+            <Label Text="Length: 100cm"
+                   Grid.Column="2"
+                   Grid.ColumnSpan="2"
+                   Grid.Row="1"
+                   BackgroundColor="Red"/>
+        <Label Text="Weight: 5kg"
+               Grid.Column="3"
+               Grid.Row="1"/>
+        </Grid>
+
+
 </ContentPage>
 
