--- a/FishinLogs/View/RecordsPage.xaml
+++ b/FishinLogs/View/RecordsPage.xaml
@@ -2,43 +2,56 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FishinLogs.View.RecordsPage"
-             Title="Catches">
+             Title="Catches"
+             xmlns:viewmodel="clr-namespace:FishinLogs.ViewModel"
+             x:DataType="viewmodel:RecordViewModel">
 
-
-    <Grid ColumnDefinitions="100, 20, *, 110"
+    <VerticalStackLayout>
+        <CollectionView
+    
+                            ItemsSource="{Binding fishes}"
+                            SelectionMode="None">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid ColumnDefinitions="100, 20, *, 110"
               RowDefinitions="100,20, 20"
               Padding="5">
-        <Frame BackgroundColor="Transparent"
+
+                        <Frame BackgroundColor="Transparent"
                Grid.Column="0"
                Grid.ColumnSpan="4"
                Grid.Row="0"
                Grid.RowSpan="3"/>
 
-        <Image Source="fish_svgrepo_com"
+                        <Image Source="fish_svgrepo_com"
                    Grid.Column="0"
                    Grid.RowSpan="3"
                    WidthRequest="80"/>
 
-        <Label Text="Asaris"
+                        <Label Text="Asaris"
                FontSize="50"
                Grid.Column="2"
                Grid.ColumnSpan="2"/>
 
-        <Label Text="Length: 100cm"
+                        <Label Text="Length: 100cm"
                    Grid.Column="2"
                    Grid.ColumnSpan="2"
                    Grid.Row="1"/>
 
-        <Label Text="Weight: 6kg"
+                        <Label Text="Weight: 6kg"
                Grid.Column="3"
                Grid.Row="1"/>
 
-        <Label Text="22.07.2022"
+                        <Label Text="22.07.2022"
                Grid.Column="2"
                Grid.Row="2"
                Grid.ColumnSpan="2"/>
 
-    </Grid>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </VerticalStackLayout>
 
 
 </ContentPage>
