--- a/Xamarin tutorial/TravelRecord/Views/HistoryPage.xaml
+++ b/Xamarin tutorial/TravelRecord/Views/HistoryPage.xaml
@@ -3,10 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecord.Views.HistoryPage"
              Title="History Page">
-    <StackLayout>
-        <Label Text="History page"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center" />
-    </StackLayout>
+    <ListView x:Name="postListView">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <TextCell Text="{Binding Experience}"/>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
 
